--- a/240-320/index.html
+++ b/240-320/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Untitled-1</title>
+<title>WebPage Menu for Nokia</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
@@ -14,7 +14,7 @@
 		<td rowspan="6">
 			<img src="images/index_02.gif" width="145" height="297" alt=""></td>
 		<td>
-			<a href="ahmetefeakan.github.io" target="_self"
+			<a href="https://ahmetefeakan.github.io" target="_self"
 				onmouseover="window.status='Home Page';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img src="images/Untitled-1_03.gif" width="84" height="23" border="0" alt=""></a></td>
