--- a/ahmet-blog.html
+++ b/ahmet-blog.html
@@ -1,29 +1,28 @@
-
-
 <!DOCTYPE html>
 <html lang="tr">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="https://mycodeland.w3spaces.com/resimler/blog/blogger.png" sizes="32x32">
+    <link rel="icon" href="WT-beyaz.png" sizes="32x32">
     <title>Ahmet'in Bloğu</title>
     <link rel="stylesheet" href="ahmet-blog-style.css">
     <style>
         .hobilerim>ol>h1{color: white;font-size: 40px;}
         .hobilerim{
-            font-family:Georgia, 'Times New Roman', Times, serif;background-color: #357e18;
+            font-family:Georgia, 'Times New Roman', Times, serif;
+            background-color: #610ba7;
             margin: 5px;
-            width: 500px; 
+            width: 620px; 
             font-size: 23px;
             position:absolute;
-            right: 5%;
+            right: 15%;
             padding: 1%;
             top: 430px;
             border-radius: 12px;
             box-shadow: 10px 10px 7px rgba(0, 0, 0, 0.2);
-            color: white;
-            height: 290px;
+            color: rgb(255, 255, 255);
+            height: 280px;
         }
     </style>
   </head>
@@ -35,7 +34,7 @@
 
      </div>
     <header>
-      <h2 style="padding: 18px;"> <img src="https://mycodeland.w3spaces.com/resimler/blog/blogger.png" style="width: 66px;">
+      <h2 style="padding: 18px;"> <img src="WT-beyaz.png" style="width: 96px;">
       Ahmet'in Bloğu <br>
         <nav>
             <a href="https://kartexdev.com.tr" target="_blank">Kartex Dev</a>
@@ -49,14 +48,14 @@
    <section>
         <article>
             <div id="kendimiTanitma" >
-                <img src="https://production.listennotes.com/podcasts/first-generation/eren-bali-founder-of-carbon-l25aBW8oDFg-OVhAQLvMmBW.1400x1400.jpg" class="profil">
-                <p>Merhaba ben Ahmet Efe;<br>
+                <img src="https://imageio.forbes.com/specials-images/imageserve/5c76b7d331358e35dd2773a9/0x0.jpg" class="profil">
+                <p><tt style="font-size:42px">Merhaba ben Ahmet Efe;</tt ><br>
                 Ostim MTAL'de okuyorum ve 15 yaşındayım.
                 Ayrıca cicibebe'yi çok severim. <br><br>Ekranın sağ alt bölümünden Github ve Linkedin Sayfama Ulaşabilirsiniz.<br><br>Ayrıca alt menüden e-postam ve telefon numaramla bana ulaşabilirsiniz.</p>
                 
             </div>
             <div class="hobilerim">
-                <ol><h1>Hobilerim</h1>
+                <ol><h1><tt>Hobilerim</tt></h1>
                     <li>Çay içmek</li>
                     <li>Bisiklet Sürmek</li>
                     <li>Yürüyüş Yapmak</li>
@@ -103,7 +102,7 @@
             box-shadow: 10px 10px 7px rgba(0, 0, 0, 0.2);
             color: white;
             position:absolute;
-            right: 130px;
+            right: 10%;
             top: 680px;">
             <source src="https://github.com/AhmetEfeAkan/mycodeland.w3spaces.com/raw/159/videos/kartlar/gus.mp4" type="video/mp4">
             </video>
@@ -111,8 +110,8 @@
    </section>
 
     <footer class="footer">
-        <h2 style="font-size: 25px;margin: 5px;">İletişim</h2>
-      <p class="footer"><a href="mailto:ahmet.efe.1478@gmail.com" style="color: rgb(235, 220, 11);">E-posta göndermek için Tıkla!</a>
+        
+      <p class="footer"><h2 style="font-size: 25px;margin: 1px;">İletişim</h2><a href="mailto:ahmet.efe.1478@gmail.com" style="color: rgb(235, 220, 11);">E-posta göndermek için Tıkla!</a>
       <br>
       <a href="tel:505-750-28-20"style="color: rgb(235, 220, 11);">Telefon etmek için Tıkla!</a>
       <br>
