--- a/ahmet-blog.html
+++ b/ahmet-blog.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="images/WT-beyaz.png" sizes="32x32">
+    <link rel="icon" href="WT-beyaz.png" sizes="32x32">
     <title>Ahmet'in Bloğu</title>
     <link rel="stylesheet" href="ahmet-blog-style.css">
     <style>
@@ -34,7 +34,7 @@
 
      </div>
     <header>
-      <h2 style="padding: 18px;"> <img src="images/WT-beyaz.png" style="width: 96px;">
+      <h2 style="padding: 18px;"> <img src="WT-beyaz.png" style="width: 96px;">
       Ahmet'in Bloğu <br>
         <nav>
             <a href="https://kartexdev.com.tr" target="_blank">Kartex Dev</a>
