--- a/ahmet-blog.html
+++ b/ahmet-blog.html
@@ -115,7 +115,7 @@
       <br>
       <a href="tel:505-750-28-20"style="color: rgb(235, 220, 11);">Telefon etmek için Tıkla!</a>
       <br>
-      Ahmet Efe AKAN  - My Code Land
+      Ahmet Efe AKAN - github.io
       <br>
       2023©
     </p>
