--- a/uygulamalar/sirasizde151.html
+++ b/uygulamalar/sirasizde151.html
@@ -9,13 +9,13 @@
   <body>
     <div class="row”>
  <div class=" col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
- <img src="kare.png" style="width:100px; height:100px;"></div>
+ <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQktFm4iSacR5cPNw1miqGNpPgItTxDd3xE9QP-zDj8xIBC4wz_cWTiFsdGgidk_ajpkI0&usqp=CAU" style="width:100px; height:100px;"></div>
  <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
- <img src="ucgen.png" style="width:100px; height:100px;"></div>
+ <img src="https://www.pngmart.com/files/17/Triangle-Shape-PNG-Clipart.png" style="width:100px; height:100px;"></div>
  <div class=" col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
- <img src="daire.png" style="width:100px; height:100px;"></div>
+ <img src="https://png.pngtree.com/png-clipart/20201029/ourmid/pngtree-circle-clipart-black-circle-png-image_2381996.jpg" style="width:100px; height:100px;"></div>
  <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
- <img src="dikdortgen.png" style="width:100px; height:100px;"></div>
+ <img src="https://w7.pngwing.com/pngs/166/320/png-transparent-rectangle-shape-rectangle-purple-blue-angle.png" style="width:100px; height:100px;"></div>
  </div> 
 
     
